tri_selection1 done

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -359,13 +359,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 10, 12, 100, 11111, 22039]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def tri_selection_1(t: list[int], n: int) -> list[int]:\n",
     "    '''tri par selection de n entiers : version en place'''\n",
     "    assert n == len(t)\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "    for i in range(n):\n",
+    "        val_min, ind_min = t[i], i\n",
+    "        for j in range(i,n):\n",
+    "            if t[j] < val_min:\n",
+    "                val_min = t[j]\n",
+    "                ind_min = j\n",
+    "        t[i],t[ind_min] = t[ind_min],t[i]\n",
+    "    return t"
    ]
   },
   {
@@ -394,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -445,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -462,13 +479,14 @@
    },
    "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "t10_up = [i for i in range(1, 11)]\n",
+    "t10_down = [i for i in range(10, 0, -1)]\n",
+    "assert t10_up == tri_selection_1(t10_down, len(t10_down))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -518,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -544,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -591,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -606,7 +624,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 23\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
     "raise NotImplementedError()"
@@ -3112,7 +3142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
