tri_selection_2 done

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 43,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -551,18 +551,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "def tri_selection_2(t: list[int], n: int) -> list[int]:\n",
     "    '''tri par selection de n entiers : version avec copie'''\n",
     "    assert n == len(t)\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "    tmp = [0] * n\n",
+    "    for i in range(n):\n",
+    "        val_min,ind_min = t[0],0\n",
+    "        for j in range(n-i):\n",
+    "            if t[j] < val_min:\n",
+    "                val_min = t[j]\n",
+    "                ind_min = j\n",
+    "        tmp[i] = t.pop(ind_min)\n",
+    "        j=0\n",
+    "    return tmp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 44,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -609,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 45,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
