--- a/knn.ipynb
+++ b/knn.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -640,27 +640,16 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 23\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "t50_up = [i for i in range(1, 51)]\n",
+    "t50_down = [i for i in range(50, 0, -1)]\n",
+    "assert t50_up == tri_selection_2(t50_down, len(t50_down))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -887,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1034,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1050,7 +1039,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'IntOrStr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 40\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtri2D_selection\u001b[39m(t: \u001b[39mlist\u001b[39m[\u001b[39mlist\u001b[39m[IntOrStr]], n: \u001b[39mint\u001b[39m, p: \u001b[39mint\u001b[39m, num_col: \u001b[39mint\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mlist\u001b[39m[\u001b[39mlist\u001b[39m[IntOrStr]]:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''signature d'un tri par selection d'un tableau 2D d'int ou de str\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m    selon l'ordre croissant de la colonne de numéro num_col'''\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mpass\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'IntOrStr' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def tri2D_selection(t: list[list[IntOrStr]], n: int, p: int, num_col: int) -> list[list[IntOrStr]]:\n",
     "    '''signature d'un tri par selection d'un tableau 2D d'int ou de str\n",
