etape 1 done without complexity

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -361,12 +361,24 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "3\n",
+      "3\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[3, 5, 10, 12, 100, 11111, 22039]"
+       "[1, 5, 33, 55]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,12 +389,15 @@
     "    assert n == len(t)\n",
     "    for i in range(n):\n",
     "        val_min, ind_min = t[i], i\n",
-    "        for j in range(i,n):\n",
+    "        for j in range(i+1,n):\n",
+    "            print(j)\n",
     "            if t[j] < val_min:\n",
     "                val_min = t[j]\n",
     "                ind_min = j\n",
     "        t[i],t[ind_min] = t[ind_min],t[i]\n",
-    "    return t"
+    "    return t\n",
+    "\n",
+    "tri_selection_1([55,33,5,1],4)"
    ]
   },
   {
@@ -411,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -428,7 +443,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -462,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -477,7 +505,59 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "8\n",
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "t10_up = [i for i in range(1, 11)]\n",
     "t10_down = [i for i in range(10, 0, -1)]\n",
@@ -486,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -536,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -551,15 +631,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 4, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tri_selection_2(t: list[int], n: int) -> list[int]:\n",
     "    '''tri par selection de n entiers : version avec copie'''\n",
@@ -578,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -625,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -649,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -876,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1023,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1039,19 +1111,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'IntOrStr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 40\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtri2D_selection\u001b[39m(t: \u001b[39mlist\u001b[39m[\u001b[39mlist\u001b[39m[IntOrStr]], n: \u001b[39mint\u001b[39m, p: \u001b[39mint\u001b[39m, num_col: \u001b[39mint\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mlist\u001b[39m[\u001b[39mlist\u001b[39m[IntOrStr]]:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''signature d'un tri par selection d'un tableau 2D d'int ou de str\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m    selon l'ordre croissant de la colonne de numéro num_col'''\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#X54sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mpass\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'IntOrStr' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tri2D_selection(t: list[list[IntOrStr]], n: int, p: int, num_col: int) -> list[list[IntOrStr]]:\n",
     "    '''signature d'un tri par selection d'un tableau 2D d'int ou de str\n",
@@ -1086,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a44b0fd6-899c-4d6a-8d9a-55bbba09de36",
    "metadata": {
     "deletable": false,
@@ -1158,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "15950f8c-c99b-4763-84bb-83f68537c26c",
    "metadata": {
     "deletable": false,
@@ -1173,7 +1233,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['André', 2, 8, 8, 3, 'Serdaigle'],\n",
+       " ['Ahmed', 9, 3, 4, 7, 'Griffondor'],\n",
+       " ['Adam', 9, 4, 7, 10, 'Serpentar'],\n",
+       " ['Albertine', 10, 6, 5, 9, 'Griffondor'],\n",
+       " ['Angelina', 10, 4, 2, 5, 'Griffondor']]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def tri2D_selection(t: list[list[IntOrStr]], n: int, p: int, num_col: int) -> list[list[IntOrStr]]:\n",
     "    '''tri par selection d'un tableau 2D d'int ou de str\n",
@@ -1182,8 +1257,25 @@
     "    for _ in range(n):\n",
     "        assert p == len(t[_])\n",
     "    assert 0 <= num_col < p or -p < num_col <= -1\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    for i in range(n):\n",
+    "        val_min, ind_min = t[i][num_col], i\n",
+    "        for j in range(i+1,n):\n",
+    "            if t[j][num_col] < val_min:\n",
+    "                val_min = t[j][num_col]\n",
+    "                ind_min = j\n",
+    "        t[i],t[ind_min] = t[ind_min],t[i]\n",
+    "    return t\n",
+    "\n",
+    "poudlard = [\n",
+    "    [\"Adam\", 9, 4, 7, 10, \"Serpentar\"],\n",
+    "    [\"Ahmed\", 9, 3, 4, 7, \"Griffondor\"], \n",
+    "    [\"Albertine\", 10, 6, 5, 9, \"Griffondor\"], \n",
+    "    [\"André\", 2, 8, 8, 3, \"Serdaigle\"],\n",
+    "    [\"Angelina\", 10, 4, 2, 5, \"Griffondor\"]\n",
+    "]\n",
+    "\n",
+    "tri2D_selection(poudlard,5,6,1)"
    ]
   },
   {
@@ -1211,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a8593698-7727-4b7d-94e2-d57d512ac31c",
    "metadata": {
     "deletable": false,
@@ -1274,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "57a7ecfc-433c-447f-899e-038b19677500",
    "metadata": {
     "deletable": false,
@@ -1291,13 +1383,12 @@
    },
    "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "assert tri2D_selection(poudlard,5,6,1) == [['André', 2, 8, 8, 3, 'Serdaigle'],['Ahmed', 9, 3, 4, 7, 'Griffondor'],['Adam', 9, 4, 7, 10, 'Serpentar'],['Albertine', 10, 6, 5, 9, 'Griffondor'],['Angelina', 10, 4, 2, 5, 'Griffondor']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "feda2689",
    "metadata": {
     "deletable": false,
@@ -1350,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b3df0689-29f3-4bb3-8c68-60d3adb29ab1",
    "metadata": {
     "deletable": false,
@@ -1367,13 +1458,12 @@
    },
    "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "assert tri2D_selection(poudlard,5,6,5) == [['Ahmed', 9, 3, 4, 7, 'Griffondor'], ['Albertine', 10, 6, 5, 9, 'Griffondor'], ['Angelina', 10, 4, 2, 5, 'Griffondor'], ['André', 2, 8, 8, 3, 'Serdaigle'], ['Adam', 9, 4, 7, 10, 'Serpentar']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8647dc06",
    "metadata": {
     "deletable": false,
@@ -1470,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "38f6f272-9ca4-4411-8eaf-95c8bd8db45b",
    "metadata": {
     "deletable": false,
@@ -1520,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3c8f6fe6-b64e-4f83-8137-9f61733fa7eb",
    "metadata": {
     "deletable": false,
@@ -1537,7 +1627,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 58\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m t0 \u001b[39m=\u001b[39m [\u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m t1 \u001b[39m=\u001b[39m [\u001b[39m3\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39msorted\u001b[39m(elemMajoritaire1D(t0, \u001b[39mlen\u001b[39;49m(t0))) \u001b[39m==\u001b[39m \u001b[39msorted\u001b[39m(t0)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39massert\u001b[39;00m elemMajoritaire1D(t1, \u001b[39mlen\u001b[39m(t1)) \u001b[39m==\u001b[39m [\u001b[39m3\u001b[39m]\n",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 58\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39massert\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(t)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
