ele maj tableau 1d done

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -359,30 +359,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "3\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1, 5, 33, 55]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tri_selection_1(t: list[int], n: int) -> list[int]:\n",
     "    '''tri par selection de n entiers : version en place'''\n",
@@ -390,14 +367,11 @@
     "    for i in range(n):\n",
     "        val_min, ind_min = t[i], i\n",
     "        for j in range(i+1,n):\n",
-    "            print(j)\n",
     "            if t[j] < val_min:\n",
     "                val_min = t[j]\n",
     "                ind_min = j\n",
     "        t[i],t[ind_min] = t[ind_min],t[i]\n",
-    "    return t\n",
-    "\n",
-    "tri_selection_1([55,33,5,1],4)"
+    "    return t"
    ]
   },
   {
@@ -426,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -443,20 +417,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -490,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -505,59 +466,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "8\n",
-      "9\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t10_up = [i for i in range(1, 11)]\n",
     "t10_down = [i for i in range(10, 0, -1)]\n",
@@ -566,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -616,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -650,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -697,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -721,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -948,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1095,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1146,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "a44b0fd6-899c-4d6a-8d9a-55bbba09de36",
    "metadata": {
     "deletable": false,
@@ -1218,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "15950f8c-c99b-4763-84bb-83f68537c26c",
    "metadata": {
     "deletable": false,
@@ -1233,22 +1142,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['André', 2, 8, 8, 3, 'Serdaigle'],\n",
-       " ['Ahmed', 9, 3, 4, 7, 'Griffondor'],\n",
-       " ['Adam', 9, 4, 7, 10, 'Serpentar'],\n",
-       " ['Albertine', 10, 6, 5, 9, 'Griffondor'],\n",
-       " ['Angelina', 10, 4, 2, 5, 'Griffondor']]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def tri2D_selection(t: list[list[IntOrStr]], n: int, p: int, num_col: int) -> list[list[IntOrStr]]:\n",
     "    '''tri par selection d'un tableau 2D d'int ou de str\n",
@@ -1265,17 +1159,7 @@
     "                val_min = t[j][num_col]\n",
     "                ind_min = j\n",
     "        t[i],t[ind_min] = t[ind_min],t[i]\n",
-    "    return t\n",
-    "\n",
-    "poudlard = [\n",
-    "    [\"Adam\", 9, 4, 7, 10, \"Serpentar\"],\n",
-    "    [\"Ahmed\", 9, 3, 4, 7, \"Griffondor\"], \n",
-    "    [\"Albertine\", 10, 6, 5, 9, \"Griffondor\"], \n",
-    "    [\"André\", 2, 8, 8, 3, \"Serdaigle\"],\n",
-    "    [\"Angelina\", 10, 4, 2, 5, \"Griffondor\"]\n",
-    "]\n",
-    "\n",
-    "tri2D_selection(poudlard,5,6,1)"
+    "    return t"
    ]
   },
   {
@@ -1303,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "a8593698-7727-4b7d-94e2-d57d512ac31c",
    "metadata": {
     "deletable": false,
@@ -1366,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "57a7ecfc-433c-447f-899e-038b19677500",
    "metadata": {
     "deletable": false,
@@ -1388,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "feda2689",
    "metadata": {
     "deletable": false,
@@ -1441,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "b3df0689-29f3-4bb3-8c68-60d3adb29ab1",
    "metadata": {
     "deletable": false,
@@ -1463,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "8647dc06",
    "metadata": {
     "deletable": false,
@@ -1560,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "id": "38f6f272-9ca4-4411-8eaf-95c8bd8db45b",
    "metadata": {
     "deletable": false,
@@ -1575,13 +1459,40 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "def elemMajoritaire1D(t : list[int], n: int) -> Union[list[int], None]:\n",
     "    '''retourne l'élément majoritaite de t tab de n entiers ou None sinon'''\n",
     "    assert n == len(t)\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "\n",
+    "    d = {}\n",
+    "    res = []\n",
+    "\n",
+    "    if n == 0:\n",
+    "        return None\n",
+    "\n",
+    "    else:\n",
+    "        for e in t:\n",
+    "            if e in d:\n",
+    "                d[e] += 1\n",
+    "            else:\n",
+    "                d[e] = 1\n",
+    "\n",
+    "        elemM = max(d.values())\n",
+    "    \n",
+    "        for cle,val in d.items():\n",
+    "            if val == elemM:\n",
+    "                res.append(cle)\n",
+    "\n",
+    "        return res"
    ]
   },
   {
@@ -1610,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "id": "3c8f6fe6-b64e-4f83-8137-9f61733fa7eb",
    "metadata": {
     "deletable": false,
@@ -1627,20 +1538,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 58\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m t0 \u001b[39m=\u001b[39m [\u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m t1 \u001b[39m=\u001b[39m [\u001b[39m3\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39msorted\u001b[39m(elemMajoritaire1D(t0, \u001b[39mlen\u001b[39;49m(t0))) \u001b[39m==\u001b[39m \u001b[39msorted\u001b[39m(t0)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39massert\u001b[39;00m elemMajoritaire1D(t1, \u001b[39mlen\u001b[39m(t1)) \u001b[39m==\u001b[39m [\u001b[39m3\u001b[39m]\n",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 58\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39massert\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(t)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y111sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -1675,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "742cdbd8-2d93-45e7-9a8d-f6665b001a2a",
    "metadata": {
     "deletable": false,
@@ -1692,13 +1590,16 @@
    },
    "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "tab = [1,2,3,4,4,4,4,4,1000] #tableau de taille impair\n",
+    "assert elemMajoritaire1D(tab,9) == [4]\n",
+    "\n",
+    "tab = [] #tableau vide\n",
+    "assert elemMajoritaire1D(tab,0) == None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "c385933c",
    "metadata": {
     "deletable": false,
@@ -1747,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1762,7 +1663,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Griffondor', 'Griffondor', 'Griffondor', 'Serdaigle', 'Serpentar']\n",
+      "['Griffondor']\n"
+     ]
+    }
+   ],
    "source": [
     "def elemMajoritaire2D(t : list[list[IntOrStr]], n: int, p: int, num_col: int) -> Union[int, str, None]:\n",
     "    '''retourne l'élément majoritaite de t tab2D de n lignes d'int ou str,\n",
@@ -1770,8 +1680,29 @@
     "    assert n == len(t)\n",
     "    for i in range(n):\n",
     "        assert p == len(t[i])\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    d = {}\n",
+    "    res = []\n",
+    "\n",
+    "    if n == 0:\n",
+    "        return None\n",
+    "\n",
+    "    else:\n",
+    "        col = [t[i][num_col] for i in range(n)]\n",
+    "        print(col)\n",
+    "        for e in col:\n",
+    "            if e in d:\n",
+    "                d[e] += 1\n",
+    "            else:\n",
+    "                d[e] = 1\n",
+    "\n",
+    "        elemM = max(d.values())\n",
+    "    \n",
+    "        for cle,val in d.items():\n",
+    "            if val == elemM:\n",
+    "                res.append(cle)\n",
+    "\n",
+    "        return res"
    ]
   },
   {
@@ -1799,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1816,7 +1747,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Griffondor', 'Griffondor', 'Griffondor', 'Serdaigle', 'Serpentar']\n"
+     ]
+    }
+   ],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -1849,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1864,7 +1803,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 67\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y123sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y123sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
     "raise NotImplementedError()"
